<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_size_small"
    android:layout_marginStart="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_xsmall"
    android:layout_marginEnd="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/corner_radius_large"
    app:cardElevation="@dimen/elevation_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/default_degree"
                android:textAppearance="?textAppearanceTitleLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDegreeBw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/default_degree_bw"
                android:textAppearance="?textAppearanceTitleSmall"
                app:layout_constraintBottom_toTopOf="@+id/textViewCity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDegree" />

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/default_city"
                android:textAppearance="?textAppearanceTitleSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageViewStatus"
                android:layout_width="@dimen/icon_size_xxlarge"
                android:layout_height="@dimen/icon_size_xxlarge"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_sunny"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/default_status"
                android:textAppearance="?textAppearanceTitleSmall"
                app:layout_constraintBottom_toBottomOf="@+id/textViewCity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewCity"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>